--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -45,43 +45,21 @@ force_wal_period_in_ms=10
 ### Directory Configuration
 ####################
 
-# data dir
+# data dirs
 # If this property is unset, system will save the data in the default relative path directory under the IoTDB folder(i.e., %IOTDB_HOME%/data/data).
 # If it is absolute, system will save the data in exact location it points to.
 # If it is relative, system will save the data in the relative path directory it indicates under the IoTDB folder.
 # Note: If data_dir is assigned an empty string(i.e.,zero-size), it will be handled as a relative path.
 # For windows platform
 # If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
-# data_dir=D:\\iotdb\\data\\data
+# data_dirs=data\\data
 # For Linux platform
 # If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# data_dir=/path/iotdb/data/data
+# data_dirs=data/data
 
 # sequence tsfile dir
-# For this property, multiple directories can be set, and all directories should be separated by ",". All TsFiles will be allocated separately in all these directories. Moreover, setting absolute directories is suggested.
-# If this property is unset, system will save the TsFiles in the default relative path directory under the data_dir folder(i.e., %IOTDB_HOME%/data/data/settled).
-# If some are absolute, system will save the data in exact location they point to.
-# If some are relative, system will save the data in the relative path directory they indicate under the data_dir folder.
-# Note: If some are assigned an empty string(i.e.,zero-size), they will be handled as a relative path.
-# For windows platform
-# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
-# tsfile_dir=D:\\iotdb\\data\\data,data\\data
-# For Linux platform
-# If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# seq_data_dir=/path/iotdb/data/data,data/data
+# under each data dir, there will be a "sequence" and an "unsequence" dir stores sequence data files and unsequence data files separately
 
-# unSequence tsfile dir
-# For this property, multiple directories can be set, and all directories should be separated by ",". All Overflow Files will be allocated separately in all these directories. Moreover, setting absolute directories is suggested.
-# If this property is unset, system will save the unsequence Files in the default relative path directory under the data_dir folder(i.e., %IOTDB_HOME%/data/data/unsequence).
-# If some are absolute, system will save the data in exact location they point to.
-# If some are relative, system will save the data in the relative path directory they indicate under the data_dir folder.
-# Note: If some are assigned an empty string(i.e.,zero-size), they will be handled as a relative path.
-# For windows platform
-# If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
-# unseq_data_dir=D:\\iotdb\\data\\unsequence,unsequence2
-# For Linux platform
-# If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# unseq_data_dir=/path/iotdb/data/unsequence,unsequence2
 
 # mult_dir_strategy
 # The strategy is used to choose a directory from tsfile_dir for the system to store a new tsfile.
@@ -102,12 +80,10 @@ force_wal_period_in_ms=10
 # Note: If sys_dir is assigned an empty string(i.e.,zero-size), it will be handled as a relative path.
 # For windows platform
 # If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
-# sys_dir=D:\\iotdb\\data\\system
+# sys_dir=data\\system
 # For Linux platform
 # If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# sys_dir=/path/iotdb/data/system
-
-data_dir=data
+# sys_dir=data/system
 
 # wal dir
 # If this property is unset, system will save the data in the default relative path directory under the IoTDB folder(i.e., %IOTDB_HOME%/data).
@@ -116,10 +92,10 @@ data_dir=data
 # Note: If wal_dir is assigned an empty string(i.e.,zero-size), it will be handled as a relative path.
 # For windows platform
 # If its prefix is a drive specifier followed by "\\", or if its prefix is "\\\\", then the path is absolute. Otherwise, it is relative.
-# wal_dir=D:\\iotdb\\data
+# wal_dir=data\\wal
 # For Linux platform
 # If its prefix is "/", then the path is absolute. Otherwise, it is relative.
-# wal_dir=/path/iotdb/data
+# wal_dir=data/wal
 
 ####################
 ### Memory Control Configuration
