--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -100,6 +100,8 @@ force_wal_period_in_ms=10
 ### Memory Control Configuration
 ####################
 
+memory_allocation_ratio=6:2:2
+
 # The maximum concurrent thread number for merging
 # Increase this value, it will increase IO and CPU consumption
 # Decrease this value, when there is much unsequence data, it will increase disk usage, which will reduce read speed
@@ -112,9 +114,6 @@ fetch_size=10000
 # Size of log buffer in each log node(in byte).
 # If WAL is enabled and the size of a insert plan is smaller than this parameter, then the insert plan will be rejected by WAL
 wal_buffer_size=16777216
-
-# total number of memtables in memtable pool, should be set at least as twice of the number of storage groups.
-memtable_number=20
 
 # time zone of server side
 # default value is +08:00
