--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -182,7 +182,11 @@ ip_white_list=0.0.0.0/0
 #    Setting the parameter to false, which has little impact on the insert performance of IoTDB system and takes up a large amount of CPU power.
 update_historical_data_possibility=false
 
-# performance statistic configuration
+
+####################
+### performance statistic configuration
+####################
+
 # Is stat performance of sub-module enable
 enable_performance_stat=false
 # The interval of display statistic result in ms.
