--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -32,7 +32,7 @@ rpc_port=6667
 # Is dynamic parameter adapter enable. It's recommended for users to enable parameter adapter.
 # The adapter can dynamically adjust the following two parameters according to the memory load of the system:
 # 1. tsfile_size_threshold which is introduced below.
-# 2. group_size_in_byte which is introduced in tsfile-format.properties.
+# 2. memtable_size_threshold which is introduced below.
 # By dynamically adjusting these two parameters, the probability of system memory explosion is greatly reduced.
 # When this parameter is set true, it will refuse to create time series or add storage groups under high system load.
 enable_parameter_adapter=true
@@ -137,6 +137,9 @@ time_zone=+08:00
 
 # When a TsFile's file size (in byte) exceeds this, the TsFile is forced closed. The default threshold is 512 MB.
 tsfile_size_threshold=536870912
+
+# When a memTable's size (in byte) exceeds this, the memtable is flushed to disk. The default threshold is 128 MB.
+memtable_size_threshold=134217728
 
 # How many threads can concurrently flush. When <= 0, use CPU core number.
 concurrent_flush_thread=0
