add micro and nano precision

--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -53,6 +53,16 @@ flush_wal_threshold=10000
 # Set this parameter to 0 may slow down the ingestion on slow disk.
 force_wal_period_in_ms=10
 
+
+# wmx
+####################
+### Timestamp Precision Configuration
+####################
+
+# Use this value to set timestamp precision as millisecond, microsecond or nanosecond.
+timestamp_precision=ms
+
+
 ####################
 ### Directory Configuration
 ####################
